--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-912.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-1.69MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-871.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-340.0KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-338.6KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-578.3KB/s(Youtube:不良林), server: 194.156.231.251, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-340.0KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-477.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-338.6KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: hkbgp2.jiantian.xyz, port: 63467, type: trojan, password: 3fbb3fd9-e1a2-4c91-8380-dc2998d1fa8c, sni: hkbgp2.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-395.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-350.1KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇨🇳 中国-3.98MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-912.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-912.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-912.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-912.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-912.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-912.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-912.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-871.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
