--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-335.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-860.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-578.3KB/s(Youtube:不良林), server: 194.156.231.251, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-340.0KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-477.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-338.6KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: hkbgp2.jiantian.xyz, port: 63467, type: trojan, password: 3fbb3fd9-e1a2-4c91-8380-dc2998d1fa8c, sni: hkbgp2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-395.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-350.1KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇨🇳 中国-3.98MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇨🇦 加拿大-387.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇸🇬 新加坡-2.26MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.15MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-578.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇨🇳 中国-350.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
