--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-335.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-860.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-829.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 134.195.196.128, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
   - {name: 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇦 加拿大-387.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇸🇬 新加坡-2.26MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.15MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇯🇵 日本-338.6KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林), server: v2.tgfaka.com, port: 48443, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
+  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇰🇷 韩国-420.4KB/s(Youtube:不良林), server: hk14.bp777.buzz, port: 21665, type: vmess, uuid: 815be877-33e5-445e-ae90-276bd63b514c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk14.bp777.buzz}}
+  - {name: 🇨🇦 加拿大-1.14MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-335.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-860.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
       - 🇭🇰 (已存活3天)香港-4.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-387.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
