--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 134.195.196.128, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-340.0KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-995.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林), server: v2.tgfaka.com, port: 48443, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
-  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇰🇷 韩国-420.4KB/s(Youtube:不良林), server: hk14.bp777.buzz, port: 21665, type: vmess, uuid: 815be877-33e5-445e-ae90-276bd63b514c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk14.bp777.buzz}}
-  - {name: 🇨🇦 加拿大-1.14MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 以色列-3.08MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 50157, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
+  - {name: 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-313.2KB/s(Youtube:不良林), server: 5.183.176.84, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 以色列-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 以色列-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 以色列-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 以色列-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 以色列-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 以色列-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-995.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1013.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-420.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 以色列-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
